# Brick

./: CMakeLists.txt
apps/: bricks.cpp  bricksmanish 12.32.09 PM.cpp  pong 12.32.09 PM.cpp
inc/: GLXtras.h  glazy.h  glazy_buffer.h  glazy_common.h  glazy_program.h  glazy_texture.h  glazy_vao.h  shape.h
lib/: GLXtras.cpp
